--- a/src/view/newUser/newUser.css
+++ b/src/view/newUser/newUser.css
@@ -7,35 +7,7 @@ body {
     justify-content: center;
 }
 
-.formulario-Login {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-  }
-
-  
-  .formulario-Login .form-group:focus-within {
-    z-index: 2;
-  }
-  
-  .formulario-Login input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-  
-  .formulario-Login input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-  
-  main ::placeholder {
-    color: black;
-  }
-  
-  main h1 {
+main h1 {
     margin: auto;
     text-align: center;
     color: white;
@@ -62,8 +34,15 @@ body {
     background: rgb(128, 11, 11);
   }
 
-  i {
+i  {
+    font-size: 2rem;
+}
+
+
+  a {
       color: red;
-      font-size: 2rem;
+      font-weight: bold;
   }
+
+
 
