--- a/src/view/login/login.css
+++ b/src/view/login/login.css
@@ -62,8 +62,20 @@ body {
     background: rgb(128, 11, 11);
   }
 
-  i {
+form  i {
       color: red;
       font-size: 2rem;
-  }
+}
+
+.registrarLink {
+  color: white;
+  font-size: 1.2rem;
+}
+
+
+.registrarLink:hover {
+  color: red;
+  cursor: pointer;
+  transition: 0.5s;
+}
 
