CRUD hosts, localstorage, start relatorios

--- a/src/components/hostOptions/hostOptions.css
+++ b/src/components/hostOptions/hostOptions.css
@@ -1,3 +1,9 @@
-.btnOpcoes {
-    
+.btnRemove {
+    color: black;
+    background: white;
+}
+
+.btnRemove:hover {
+    background: red;
+    color: white;
 }
